src/iocc/tests/ui/fail/inject-attribute-multiple-occurrences.rs
use iocc::prelude::*;

struct Test;

#[component]
impl Test {
    #[inject]
    pub fn new1() -> Self {
        todo!()
    }

    #[inject]
    pub fn new2() -> Self {
        todo!()
    }
}

fn main() {}
